Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116201

Background and grid ignore theme's light properties

    XMLWordPrintable

Details

    • 4398351b7 (dev), 2d41b50c2 (6.6)

    Description

      Graph background and grid ignore any light properties set in a theme.

      Easily reproducible with the qmltheme manual test.

      Attachments

        For Gerrit Dashboard: QTBUG-116201
        # Subject Branch Project Status CR V

        Activity

          People

            tokorpip Tomi Korpipää
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes