Make grid lines and background react to theme lights

Fixes: QTBUG-116201
Change-Id: I324f80e08cb60bca8d575e8a3f41696239c486d6
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Sakaria Pouke <sakaria.pouke@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit 4398351b727ac08baf262eb3a03e11aec3524b2c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>