src/graphs/qml/resources/GridLine.qml
@@ -13,11 +13,12 @@ Component {
 
         Model {
             visible: !isPolar
-            source: "#Cube"
+            source: "#Cylinder"
             depthBias: 1
+            eulerRotation: Qt.vector3d(0., 0., 90.)
+            scale: Qt.vector3d(1., 1., 1.5)
             materials: [ DefaultMaterial {
                     diffuseColor: lineColor
-                    lighting: DefaultMaterial.NoLighting
                 }
             ]
         }
